--- a/servoo_stevedoring/views/outturn_report_view.xml
+++ b/servoo_stevedoring/views/outturn_report_view.xml
@@ -8,13 +8,12 @@
                 <tree string="Outturn Report">
                     <field name="name" />
                     <field name="date" />
-                    <field name="bl_id" />
+                    <field name="consignee_id" />
                     <field name="vessel_id" />
-                    <field name="cargo_description" />
-                    <field name="quantity" />
-                    <field name="shortage" />
-                    <field name="excess" />
-                    <field name="delivery" />
+                    <field name="voyage_number" />
+                    <field name="loading_port" />
+                    <field name="discharge_port" />
+
                 </tree>
             </field>
         </record>
@@ -32,22 +31,51 @@
                             <field name="date_end" />
                         </group>
                         <group col="4">
-                            <field name="bl_id" required="1" />
-                            <field name="vessel_id" />
                             <field name="consignee_id" widget="res_partner_many2one" colspan="2"
                                            context="{'show_address': 1, 'show_vat': True}"
-                                           options='{"always_reload": True}'/>
+                                           options='{"always_reload": True}' required="1"/>
+                            <field name="stevedoring_file_id" required="1"/>
+                            <field name="vessel_id" />
+                            <field name="voyage_number" />
                             <field name="loading_port" />
                             <field name="discharge_port" />
-                            <field name="cargo_description" colspan="2" />
                         </group>
-                        <group col="4">
-                            <field name="quantity" />
-                            <field name="shortage" />
-                            <field name="excess" />
-                            <field name="delivery" />
-                            <field name="note" colspan="4" />
-                        </group>
+                        <notebook>
+                            <page string="Bills of lading">
+                                <field name="line_ids" widget="one2many" mode="tree,form" required="1">
+                                    <tree>
+                                        <field name="bl_id" />
+                                        <field name="manifested_quantity" />
+                                        <field name="delivery_quantity" />
+                                        <field name="unit_id" />
+                                        <field name="manifested_weight" />
+                                        <field name="shortage_weight" />
+                                    </tree>
+                                    <form>
+                                        <sheet>
+                                            <group col="4">
+                                                <field name="bl_id" required="1" colspan="4" domain="[('consignee_id', '=', parent.consignee_id), ('vessel_id', '=', parent.vessel_id), ('voyage_number', '=', parent.voyage_number)]"/>
+                                                <field name="manifested_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="shortage_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="excess_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="delivery_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="manifested_weight" />
+                                                <field name="shortage_weight" />
+                                                <field name="excess_weight" />
+                                                <field name="delivery_weight" />
+                                            </group>
+                                            <group string="Notes">
+                                                <field name="note" nolabel="1" />
+                                            </group>
+                                        </sheet>
+                                    </form>
+                                </field>
+                            </page>
+                        </notebook>
                     </sheet>
                 </form>
             </field>
