--- a/servoo_stevedoring/views/stevedoring_file_view.xml
+++ b/servoo_stevedoring/views/stevedoring_file_view.xml
@@ -52,14 +52,18 @@
             <field name="arch" type="xml">
                 <form string="stevedoring file">
                     <header>
-                        <button name="action_open" states="draft" type="object" string="Validate"/>
-                        <button name="action_done" states="open" type="object" string="Done"/>
+                        <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_stevedoring.stevedoring_group_user"/>
+                        <button name="action_done" states="open" type="object" string="Done" groups="servoo_stevedoring.stevedoring_group_user"/>
                         <button name="create_invoices" string="Create Invoice"
+                                groups="servoo_stevedoring.stevedoring_group_user"
                                 type="object" class="btn-primary" data-hotkey="q"
                                 attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','&gt;=',1)]}"/>
+                        <button name="%(action_wizard_stevedoring_outturn_report)d"
+                                groups="servoo_stevedoring.stevedoring_group_user"
+                                                string="Create Outturn Report" type="action"/>
                         <button name="action_draft" states="cancel" type="object" string="Open"
                                 groups="servoo_stevedoring.stevedoring_group_manager"/>
-                        <button name="action_cancel" states="open,done" type="object" string="Cancel"/>
+                        <button name="action_cancel" states="open,done" type="object" string="Cancel" groups="servoo_stevedoring.stevedoring_group_user"/>
                         <field name="state" widget="statusbar" statusbar_visible="draft,open,done"/>
                     </header>
                     <sheet>
@@ -75,6 +79,14 @@
                             <button name="open_operation_action" type="object" class="oe_stat_button" icon="fa-list-ul"
                                     context="{'xml_id':'servoo_stevedoring.action_stevedoring_operation'}"
                                     help="Show the operations for this stevedoring file" string="Operations"/>
+
+                            <button name="open_operation_action" type="object" class="oe_stat_button" icon="fa-align-justify"
+                                    context="{'xml_id':'servoo_stevedoring.actions_outturn_report'}"
+                                    help="Show the outturn reports for this stevedoring file" string="Outturn Reports"/>
+
+                            <button name="open_mate_receipt" type="object" class="oe_stat_button" icon="fa-align-justify"
+                                    context="{'xml_id':'servoo_stevedoring.actions_mate_receipt'}"
+                                    help="Show the mate receipts for this stevedoring file" string="Mate Receipts"/>
                         </div>
                         <group>
                             <group col="4">
@@ -86,9 +98,7 @@
                                     <field name="date" />
                                 </group>
                                 <group colspan="2">
-                                    <field name="partner_id" widget="res_partner_many2one"
-                                       context="{'show_address': 1, 'show_vat': True}"
-                                       options='{"always_reload": True}'/>
+                                    <field name="partner_ids" widget="many2many_tags" required="1"/>
                                     <field name="consignee_agent_id" widget="res_partner_many2one"
                                            context="{'show_address': 1, 'show_vat': True}"
                                            options='{"always_reload": True}'/>
@@ -115,9 +125,17 @@
                                     <field name="cargo_description" colspan="4" />
                                     <field name="date_debut_operation" />
                                     <field name="date_end_operation" />
+                                </group>
+                                <group col="4">
                                     <field name="manifested_quantity" />
+                                    <field name="unit_id" />
+                                    <field name="manifested_tonnage" />
                                     <field name="unloaded_quantity" />
+                                    <field name="unit_id" readonly="1"/>
+                                    <field name="unloaded_tonnage" />
                                     <field name="transported_quantity" />
+                                    <field name="unit_id" readonly="1"/>
+                                    <field name="transported_tonnage" />
                                 </group>
                             </group>
                         </group>
@@ -132,15 +150,58 @@
                                         <field name="vessel_id"/>
                                         <field name="loading_port"/>
                                         <field name="discharge_port"/>
-                                        <field name="outturn_report_count" invisible="1" />
-                                        <button name="%(action_wizard_stevedoring_outturn_report)d"
-                                                string="Create Outturn Report" type="action"
-                                                attrs="{'invisible': [('outturn_report_count','&gt;=',1)]}"
-                                                class="btn-primary"/>
+<!--                                        <field name="outturn_report_count" invisible="1" />-->
+<!--                                        <button name="%(action_wizard_stevedoring_outturn_report)d"-->
+<!--                                                string="Create Outturn Report" type="action"-->
+<!--                                                attrs="{'invisible': [('outturn_report_count','&gt;=',1)]}"-->
+<!--                                                class="btn-primary"/>-->
 <!--                                        <button name="%(action_report_outturn_report)d" type="action"-->
 <!--                                                attrs="{'invisible': [('outturn_report_count','&gt;=',1)]}"-->
 <!--                                                class="oe_stat_button" icon="fa-print"/>-->
                                     </tree>
+                                </field>
+                            </page>
+                            <page string="Customs Declarations">
+                                <field name="customs_declaration_ids" widget="one2many" mode="tree,form">
+                                    <tree string="Customs Declaration">
+                                        <field name="name" />
+                                        <field name="date" />
+                                        <field name="charger_id" />
+                                        <field name="loading_port" />
+                                        <field name="unloading_port" />
+                                        <field name="mate_receipt_count" invisible="1" />
+                                        <button name="%(action_wizard_stevedoring_mate_receipt)d"
+                                                groups="servoo_stevedoring.stevedoring_group_user"
+                                                string="Create Mate Receipt" type="action"
+                                                attrs="{'invisible': [('mate_receipt_count','&gt;=',1)]}"
+                                                class="btn-primary"/>
+                                    </tree>
+                                    <form string="Customs Declaration">
+                                        <sheet>
+                                            <group col="4">
+                                                <field name="name" />
+                                                <field name="date" />
+                                                <field name="charger_id" />
+                                                <field name="vessel_id" />
+                                                <field name="voyage_number" />
+                                                <field name="loading_port" />
+                                                <field name="unloading_port" />
+                                            </group>
+                                            <notebook>
+                                                <page string="Goods">
+                                                    <field name="good_ids" widget="one2many" mode="tree" required="1">
+                                                        <tree string="Cargo Description" editable="bottom">
+                                                            <field name="name" />
+                                                            <field name="quantity" />
+                                                            <field name="unit_id" />
+                                                            <field name="gross_weight" />
+                                                            <field name="volume" />
+                                                        </tree>
+                                                    </field>
+                                                </page>
+                                            </notebook>
+                                        </sheet>
+                                    </form>
                                 </field>
                             </page>
                             <page string="Operations">
@@ -151,27 +212,32 @@
                                         <field name="date_end" />
                                         <field name="operation_nature" />
                                         <field name="name_of_responsible" />
+                                        <button name="%(action_report_shift_report)d" type="action"
+                                                class="oe_stat_button" icon="fa-print"/>
                                     </tree>
                                     <form>
                                         <sheet>
-                                            <group>
+<!--                                            <group>-->
                                                 <group col="4">
                                                     <field name="name"/>
+                                                    <field name="operation_nature"/>
                                                     <field name="date_debut" required="1"/>
                                                     <field name="date_end"/>
-                                                    <field name="operation_nature"/>
+                                                    <field name="shift" />
                                                     <field name="name_of_responsible" required="1"/>
                                                 </group>
-                                            </group>
+<!--                                            </group>-->
                                             <notebook>
                                                 <page string="Operation Lines">
                                                     <field name="operation_line_ids" widget="one2many"
                                                            mode="tree,form" required="1">
-                                                        <tree editable="top">
+                                                        <tree editable="bottom">
                                                             <field name="product_id"/>
                                                             <field name="cargo_description"/>
                                                             <field name="location"/>
                                                             <field name="quantity"/>
+                                                            <field name="unit_id"/>
+                                                            <field name="weight" />
                                                             <field name="volume"/>
                                                             <field name="note"/>
                                                         </tree>
@@ -182,7 +248,7 @@
                                     </form>
                                 </field>
                             </page>
-                            <page string="Formalities">
+                            <page string="Invoice Elements">
                                 <field name="formality_line" widget="one2many" mode="tree,kanban">
                                     <tree string="Formalities Lines" editable="bottom"
                                           decoration-success="state=='done'" decoration-muted="state=='cancel'">
