--- a/servoo_stevedoring/wizard/wizard_outturn_report_view.xml
+++ b/servoo_stevedoring/wizard/wizard_outturn_report_view.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record model="ir.ui.view" id="wizard_stevedoring_outturn_report_form">
         <field name="name">wizard.stevedoring.outturn.report.form</field>
-        <field name="model">servoo.stevedoring.bl.outturn.report</field>
+        <field name="model">servoo.stevedoring.outturn.report.wizard</field>
         <field name="arch" type="xml">
             <form string="Outturn Report">
                <sheet>
@@ -12,22 +12,52 @@
                             <field name="date_end" />
                         </group>
                         <group col="4">
-                            <field name="bl_id" required="1" readonly="1"/>
-                            <field name="vessel_id" />
                             <field name="consignee_id" widget="res_partner_many2one" colspan="2"
                                            context="{'show_address': 1, 'show_vat': True}"
-                                           options='{"always_reload": True}'/>
+                                           options='{"always_reload": True}' required="1"
+                            />
+                            <field name="stevedoring_file_id" required="1" readonly="1"/>
+                            <field name="vessel_id" />
+                            <field name="voyage_number" />
                             <field name="loading_port" />
                             <field name="discharge_port" />
-                            <field name="cargo_description" colspan="2" />
                         </group>
-                        <group col="4">
-                            <field name="quantity" />
-                            <field name="shortage" />
-                            <field name="excess" />
-                            <field name="delivery" />
-                            <field name="note" colspan="4" />
-                        </group>
+                        <notebook>
+                            <page string="Bills of lading">
+                                <field name="line_ids" widget="one2many" mode="tree,form" required="1">
+                                    <tree>
+                                        <field name="bl_id" />
+                                        <field name="manifested_quantity" />
+                                        <field name="delivery_quantity" />
+                                        <field name="unit_id" />
+                                        <field name="manifested_weight" />
+                                        <field name="shortage_weight" />
+                                    </tree>
+                                    <form>
+                                        <sheet>
+                                            <group col="4">
+                                                <field name="bl_id" required="1" colspan="4" domain="[('consignee_id', '=', parent.consignee_id), ('vessel_id', '=', parent.vessel_id), ('voyage_number', '=', parent.voyage_number)]"/>
+                                                <field name="manifested_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="shortage_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="excess_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="delivery_quantity" />
+                                                <field name="unit_id" />
+                                                <field name="manifested_weight" />
+                                                <field name="shortage_weight" />
+                                                <field name="excess_weight" />
+                                                <field name="delivery_weight" />
+                                            </group>
+                                            <group string="Notes">
+                                                <field name="note" nolabel="1" />
+                                            </group>
+                                        </sheet>
+                                    </form>
+                                </field>
+                            </page>
+                        </notebook>
                     </sheet>
                 <footer>
                     <button name="action_validate" string="Validate" type="object" class="oe_highlight" data-hotkey="q"/>
@@ -38,8 +68,8 @@
     </record>
 
     <record id="action_wizard_stevedoring_outturn_report" model="ir.actions.act_window">
-            <field name="name"></field>
-            <field name="res_model">servoo.stevedoring.bl.outturn.report</field>
+            <field name="name">Outturn Report</field>
+            <field name="res_model">servoo.stevedoring.outturn.report.wizard</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
         </record>
