--- a/servoo_shipping/views/shipping_file_view.xml
+++ b/servoo_shipping/views/shipping_file_view.xml
@@ -57,7 +57,6 @@
                                     help="Generate XML" groups="servoo_shipping.shipping_group_user"/>
 
                         </div>
-                        <group>
                             <group col="4">
                                 <field name="name" readonly="1"/>
                                 <field name="shipping_pda_id"/>
@@ -67,7 +66,6 @@
 
                                 <field name="file_type_id" required="1"/>
                             </group>
-                            <group>
                                 <group col="4" string="Vessel">
                                     <field name="vessel" required="1"/>
                                     <field name="shipowner_id" widget="res_partner_many2one"
@@ -100,11 +98,15 @@
                                     <!--                                <field name="crew_count" readonly="1"/>-->
                                     <!--                                <field name="passenger_count" readonly="1"/>-->
                                 </group>
-                            </group>
-                        </group>
                         <notebook>
                             <page string="Bills of lading">
-                                <field name="bl_ids" widget="one2many" mode="tree,form">
+                                <field name="bl_ids" widget="one2many" mode="tree,form"
+                                context="{
+                                    'default_vessel_id': vessel,
+                                    'default_loading_port': port_previous_next,
+                                    'default_discharge_port': port_arrival_departure,
+                                }"
+                                >
                                     <form string="Bill of lading">
                                         <sheet>
                                             <group col="4">
@@ -114,8 +116,10 @@
                                                 <field name="consignee_id"/>
                                                 <field name="notify_id"/>
                                                 <field name="vessel_id"/>
+                                                <field name="voyage_number"/>
                                                 <field name="loading_port"/>
                                                 <field name="discharge_port"/>
+                                                <field name="shipping_file_id" invisible="1" />
                                             </group>
                                             <group string="Cargo Description">
                                                 <field name="cargo_description" required="1" nolabel="1" colpsan="4"/>
@@ -123,7 +127,7 @@
                                             <notebook>
                                                 <page string="Goods Details">
                                                     <field name="good_ids" widget="one2many" required="1"
-                                                           mode="tree,form">
+                                                           mode="tree,form" context="{'default_file_id': shipping_file_id}">
                                                         <tree string="Good">
                                                             <field name="name"/>
                                                             <field name="quantity"/>
@@ -141,6 +145,7 @@
                                                                     <field name="gross_weight"/>
                                                                     <field name="net_weight"/>
                                                                     <field name="volume"/>
+                                                                    <field name="file_id" invisible="1" />
                                                                 </group>
                                                             </sheet>
                                                         </form>
