--- a/servoo_sales/views/account_move_views.xml
+++ b/servoo_sales/views/account_move_views.xml
@@ -11,6 +11,13 @@
                     <label for="amount_total_in_currency_signed_letter" string="Stopped this invoice for the sum" colspan="2"/>
                     <field name="amount_total_in_currency_signed_letter" readonly="1" nolabel="1" colspan="2"/>
                 </field>
+                <field name="tax_totals_json" position="after">
+                    <label for="amount_other_currency" string="Other Total"/>
+                    <div class="o_row">
+                             <field name="amount_other_currency" />
+                             <field name="other_currency_id" readonly="1"/>
+                        </div>
+                </field>
                 <notebook position="before">
                     <group col="4">
                         <field name="loading_place_id" />
@@ -19,7 +26,11 @@
                         <field name="travel_date" />
                         <field name="transport_letter" />
                         <field name="assessed_value" />
-                        <field name="weight" />
+                        <label for="weight" />
+                        <div class="o_row">
+                             <field name="weight" />
+                             <field name="unit_id" options="{'no_open': True, 'no_create': False}" />
+                        </div>
                         <field name="volume" />
                         <field name="custom_declaration_reference" />
                         <field name="custom_declaration_date" />
